# multi-agents

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/scripts/: demo-m7-routing.sh
crates/cli/src/: lib.rs  main.rs
crates/cli/src/broadcast/: manager.rs  mod.rs  targets.rs
crates/cli/src/cli/: commands.rs  mod.rs  parser.rs
crates/cli/src/commands/: agent.rs  broadcast.rs  config.rs  context.rs  db.rs  doctor.rs  init.rs  mod.rs  monitor.rs  send.rs  session.rs  tui.rs
crates/cli/src/logging/: events.rs  mod.rs  ndjson.rs
crates/cli/src/monitoring/: alerting.rs  broadcast_metrics.rs  dashboard.rs  error_tracker.rs  mod.rs  performance_monitor.rs  resource_monitor.rs
crates/cli/src/providers/: manager.rs  mod.rs
crates/cli/src/repository/: agent_repository.rs  mod.rs  project_repository.rs  session_repository.rs  task_repository.rs
crates/cli/src/supervisor/: debug.rs  manager.rs  metrics.rs  mod.rs  subscription.rs
crates/cli/src/tests/: mod.rs
crates/cli/src/tests/integration/: agent_tests.rs  broadcast_supervisor_integration_tests.rs  broadcast_tests.rs  cli_tui_tests.rs  config_tests.rs  db_tests.rs  doctor_tests.rs  m7_acceptance_tests.rs  m7_comprehensive_tests.rs  m7_documentation_tests.rs  m7_examples_validation_tests.rs  mod.rs  send_tests.rs  (+12 more)
crates/cli/src/tmux/: manager.rs  mod.rs  operations.rs  retry.rs
crates/cli/src/tui/: app.rs  mod.rs  navigation.rs  themes.rs
crates/cli/src/utils/: config_resolver.rs  constants.rs  db_path.rs  errors.rs  locks.rs  mod.rs  timeouts.rs
(+127 files in other folders)
