[package]
name = "multi-agents-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config-model = { path = "../config-model" }
db = { path = "../db" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
libc = "0.2"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.27"

[dev-dependencies]
tempfile = "3"
